# kaist-thesis

./: .gitignore  AGENTS.md  main.py  pyproject.toml
KAIST_thesis-master/: .gitignore  CHECKPOINTS_README.md  CLAUDE.md  CLUSTERING_IMPLEMENTATION.md  HP_ENHANCEMENTS_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  SCRIPT_EXECUTION_ORDER.md  TNIC_PIPELINE_README.md  TNIC_PIPELINE_SUMMARY.md  TNIC_QUICKSTART.md  TNIC_REPLICATION_PLAN.md  analysis_dataguide.py  checkpoint_utils.py  diagnose_dropna.py  diagnose_spec3_dropna.py  eda_dataguide.py  fama-macbeth.ipynb  fama-macbeth.py  fama_macbeth_sample_code.py  figure1_graph_a.py  load_dataguide.py  pyproject.toml  sample_mongo_db.json  test_extraction_and_cleaning.py  text-based-industry-momentum-korea-2.py  text-based-industry-momentum-korea-autoencoder-2.py  text-based-industry-momentum-korea-autoencoder.py  text-based-industry-momentum-korea.ipynb  text-based-industry-momentum-korea.py  visualize-tnic.py
KAIST_thesis-master/.claude/: settings.local.json
KAIST_thesis-master/computational_linguistics_exercise/: INTRO_ko.md  README.txt  computational_linguistics_exercise_slides.md  exercise session instructions.docx  exercise_session_instructions.md
KAIST_thesis-master/config/: backtest.yaml  data.yaml  hoberg_phillips.yaml  korean_nlp.yaml  mongodb.yaml  operators.yaml  paths.yaml  settings.yaml  tnic_dl.yaml
KAIST_thesis-master/examples/: clustering_example.ipynb  clustering_example.py  korean_dart_example.py  tnic_example.ipynb  tnic_example.py
KAIST_thesis-master/experiments/: analyze_phase1_filters_2010.py  check_fnguide_survivorship_bias.py  check_mongodb_coverage.py  check_text_coverage.py  compare_raw_vs_clean_coverage.py  test_truncation_method_2010.py  track_coverage_pipeline_2010.py
KAIST_thesis-master/regression/: README.md  __init__.py  cross_section.py  fama_macbeth.py  preprocessing.py  results.py  rolling_beta.py  utils.py
KAIST_thesis-master/reports/: 1.1_mongodb_coverage.md  1.2_data_extraction.md  2.1_tokenization_test.md  2.3_corpus_building_by_year.md  3.1_binary_matrices_by_year.md  3.2_similarity_matrices_by_year.md  4.1_tnic_construction_pilot.md  4.2_figure1b_replication_pilot.md
KAIST_thesis-master/scripts/: README.md  __init__.py  analyze_fnguide_classification_levels.py  build_binary_matrices_by_year.py  build_korean_corpus_by_year.py  build_tnic_peer_groups.py  calculate_all_fnguide_membership_fractions.py  calculate_fnguide_membership_fraction.py  check_mongodb.py  compute_similarity_matrices_by_year.py  debug_stock_codes.py  extract_korean_texts.py  plot_char_distribution.py  retrieve_mongodb_data.py  run_tnic_dl_pipeline.py  run_tnic_pipeline.py  show_korean_text.py  show_sample_text.py  test_config.py  test_korean_tokenization.py  validate_mongodb_coverage.py
KAIST_thesis-master/tests/: README.md  conftest.py  test_config.py  test_example.py  test_fama_macbeth.py
KAIST_thesis-master/tnic/: README.md  (+17 more)
(+120 files in other folders)
