[project]
name = "kaist-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arch>=8.0.0",
    "click>=8.4.2",
    "jupyterlab>=4.6.1",
    "jupytext>=1.19.4",
    "linearmodels>=7.0",
    "markitdown[all]>=0.1.5",
    "matplotlib>=3.11.0",
    "nbstripout>=0.9.1",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyalex>=0.21",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
    "tqdm>=4.68.4",
    "truststore>=0.10.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
