[project]
name = "kaist-thesis"
version = "0.1.0"
description = "Korea Patent Data Project (KoPDP) - Refactored pipeline for KIPRIS data"
authors = [
    {name = "jaepil-choi.laptop",email = "chljeffreyz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jupyterlab (>=4.4.7,<5.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "quantstats (>=0.0.77,<0.0.78)",
    "sympy (>=1.14.0,<2.0.0)",
    "arch (>=7.2.0,<8.0.0)",
    "tables (>=3.10.2,<4.0.0)",
    "pmdarima (>=2.0.4,<3.0.0)",
    "jupytext (>=1.17.3,<2.0.0)",
    "nbstripout (>=0.8.1,<0.9.0)",
    "markitdown[all] (>=0.1.3,<0.2.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "dart-fss (>=0.4.14,<0.5.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pymupdf4llm (>=0.0.27,<0.0.28)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (>=3.8.0,<4.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
    "pymongo (>=4.10.1,<5.0.0)",
    "python-mecab-ko (>=1.3.7,<2.0.0)",
    "kiwipiepy (>=0.21.0,<0.22.0)",
    "linearmodels (>=7.0,<8.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "alpha-excel @ file:///C:/Users/chlje/VSCodeProjects/KAIST_thesis/dist/alpha_excel-0.2.0-py3-none-any.whl",
    "multiprocess (>=0.70.18,<0.71.0)",
    "torch (>=2.9.1,<3.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
]

[project.optional-dependencies]
korean = ["konlpy>=0.6.0,<0.7.0"]
all = ["konlpy>=0.6.0,<0.7.0"]


[tool.poetry]
packages = [
    {include = "tnic"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
